--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Is This A Good Time?</title>
-  <link rel="stylesheet" href="/public/normalize.css">
-  <link rel="stylesheet" href="/public/styles.css">
+  <link rel="stylesheet" href="/build/style.css">
 </head>
 <body>
   <div id="app"></div>
 
-  <script src="/public/bundle.js"></script>
+  <script src="/build/bundle.js"></script>
 </body>
 </html>
